--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "bootstrap-icons": "^1.13.1",
     "crypto-js": "^4.2.0",
     "react": "^19.1.0",
